[package]
name = "tellmeinfo"
version = "0.1.0"
authors = [ "Gus Ruben <gusruben@protonmail.com>" ]
edition = "2021"
description = "A simple way to automate system monitors for a variety of applications"
keywords = ["automation", "shell", "pipeline", "script"]
readme = "README.md"
license = "MIT"

[[bin]]
name = "tmi"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
shlex = "1.3.0"
sysinfo = "0.33.1"
